# midi-synthesizer-autoconnect

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml
src/: listener.rs  main.rs  res.rs  seq.rs  synchronizer.rs
