[package]
name = "midi-synthetizer-autoconnect"
version = "0.1.0"
authors = ["Mathieu Rochette <mathieu@texthtml.net>"]
edition = "2018"
description = "Autoconnect MIDI inputs to a MIDI synthetizer"
keywords = ["ALSA", "MIDI", "synthetizer"]
categories = ["command-line-utilities"]
repository = "https://github.com/texthtml/midi-synthetizer-autoconnect"
license = "AGPL-3.0"

[dependencies]

alsa = "0.5.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
