[package]
name = "midi-synthesizer-autoconnect"
version = "0.1.0"
authors = ["Mathieu Rochette <mathieu@texthtml.net>"]
edition = "2018"
description = "Autoconnect MIDI inputs to a MIDI synthesizer"
keywords = ["ALSA", "MIDI", "synthesizer"]
categories = ["command-line-utilities"]
repository = "https://github.com/texthtml/midi-synthesizer-autoconnect"
license = "AGPL-3.0"

[dependencies]

alsa = "0.5.0"
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
